--- a/examples/basic/basic.yaml
+++ b/examples/basic/basic.yaml
@@ -6,6 +6,6 @@ gamma: 0.1  # pure dephasing rate, eV
 t1_n: 101  # number of time points along t1
 t2_n: 1  # number of time points along t2
 t3_n: 101  # number of time points along t2
-t1_max: 100  # max t1 value
-t2_max: 0  # max t2 value  
-t3_max: 100  # max t2 value
+t1_max: 100  # max t1 value, fs
+t2_max: 0  # max t2 value, fs
+t3_max: 100  # max t2 value, fs
