--- a/Project.toml
+++ b/Project.toml
@@ -6,7 +6,10 @@ version = "X.Y.Z"
 [deps]
 DSP = "717857b8-e6f2-59f4-9121-6e50c889abd2"
 IterTools = "c8e1da08-722c-5040-9ed9-7db0dc04731e"
+PlotlyJS = "f0f68f2c-4968-5e81-91da-67840de0976a"
+Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
 ProgressMeter = "92933f4c-e287-5a05-a399-4b506db050ca"
+Rsvg = "c4c386cf-5103-5370-be45-f3a111cca3b8"
 YAML = "ddb6d928-2868-570f-bddf-ab3f9cf99eb6"
 
 [compat]
