--- a/Project.toml
+++ b/Project.toml
@@ -1,7 +1,7 @@
 name = "Mbo"
 uuid = "abb35812-7e48-465d-8fd2-5263f57cc2e0"
-authors = ["Samuel Palato","Pierre-Francois Duc"]
-version = "1.1.1"
+authors = ["Samuel Palato", "Pierre-Francois Duc"]
+version = "1.1.2"
 
 [deps]
 DSP = "717857b8-e6f2-59f4-9121-6e50c889abd2"
@@ -14,6 +14,7 @@ ProgressMeter = "92933f4c-e287-5a05-a399-4b506db050ca"
 Revise = "295af30f-e4ad-537b-8983-00126c2a3abe"
 Rsvg = "c4c386cf-5103-5370-be45-f3a111cca3b8"
 Runner = "847b7089-1ebf-4e83-b33e-c3c97d2ccb04"
+Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
 YAML = "ddb6d928-2868-570f-bddf-ab3f9cf99eb6"
 
 [compat]
